# Learning-OpenGL-Rust

rust-gl/: Cargo.toml  build.rs
rust-gl/assets/shaders/: triangle.vert
rust-gl/lib/gl/: Cargo.toml  build.rs
rust-gl/lib/gl/src/: lib.rs
rust-gl/render_gl_derive/: Cargo.toml
rust-gl/render_gl_derive/src/: lib.rs
rust-gl/src/: main.rs  resources.rs  triangle.rs
rust-gl/src/render_gl/: buffer.rs  camera.rs  color_buffer.rs  data.rs  mod.rs  shader.rs
