[package]
name = "rust-gl"
version = "0.1.0"
authors = ["Åukasz Marzec <lukasz.marzec@tomtom.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
failure = "0.1"
sdl2 = { version = "0.31.0", features = ["bundled", "static-link"] }
gl = { path = "lib/gl" }

[build-dependencies]
walkdir = "2.1"

[features]
gl_debug = ["gl/debug"]